nxSDK v0.3.0 (not released):
  NEW: Example application for adding or removing credits from a user.
  NEW: Function arguments are validated in both release and debug builds.
  NEW: nxSDK library no longer links against C runtimes (only 9KB now).
  NEW: System error codes are set on failure (retrieved with GetLastError).
  CHG: Function return types changed; recompile your applications.
       - Io_GetOnlineData from void to BOOL.
       - Io_KickConnId from void to BOOL.
       - Io_KickUserId from void to BOOL.
       - Io_ShmFree from void to BOOL.
  CHG: Improved comments in example applications.

nxSDK v0.2.0 (May 15, 2006):
  NEW: Improved function documentation.
  NEW: Io_GetOnlineDataEx function to retrieve extended online information.
  CHG: Renamed several online types and constants for consistency.
       - ONLINEDATA_ROUTINE to Io_OnlineDataProc
       - ONLINEDATA_CONTINUE to IO_ONLINEDATA_CONTINUE
       - ONLINEDATA_STOP to IO_ONLINEDATA_STOP
  CHG: Simplified the "who" example application.

nxSDK v0.1.0 (May 14, 2006):
  CHG: Initial release.